Se actulizan bibiliotecas deprecadas